--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,16 @@
-# Logs
-logs
-*.log
+# Node / Vite
+node_modules/
+dist/
+.vite/
+
+# Env
+.env*
+!.env.example
+
+# Logs & misc
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-.env
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+*.local
